k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pedidos-veloz
  labels:
    project: pedidos-veloz
